feat: Altered to deploy on main branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: ["next-app"]  # or change to "main"
+    branches: ["main"]  # or change to "main"
   workflow_dispatch:
 
 permissions:
